Added grpc-gateway for REST server
